Fetch metadata for DOI citations

--- a/src/datasets/MAG-10.mdx
+++ b/src/datasets/MAG-10.mdx
@@ -1,22 +1,9 @@
 ---
 title: MAG-10
 source: https://www.cs.cornell.edu/~arb/data/cat-edge-MAG-10/
-citation: |
-  @inproceedings{Amburg-2020-categorical,
-    title   = {Clustering in graphs and hypergraphs with categorical edge labels},
-    author  = {Amburg, Ilya and Veldt, Nate and Benson, Austin R.},
-    booktitle = {Proceedings of the Web Conference},
-    year    = {2020},
-    doi={10.1145/3366423.3380152}
-  }
-  @inproceedings{Sinha-2015-MAG,
-    doi = {10.1145/2740908.2742839},
-    year  = {2015},
-    publisher = {{ACM} Press},
-    author = {Arnab Sinha and Zhihong Shen and Yang Song and Hao Ma and Darrin Eide and Bo-June (Paul) Hsu and Kuansan Wang},
-    title = {An Overview of Microsoft Academic Service ({MAS}) and Applications},
-    booktitle = {Proceedings of the 24th International Conference on World Wide Web}
-  }
+citation:
+  - 10.1145/3366423.3380152
+  - 10.1145/2740908.2742839
 license: UNKNOWN
 network-type: hypergraph
 tags:
