--- a/src/datasets/congress-bills.mdx
+++ b/src/datasets/congress-bills.mdx
@@ -1,41 +1,10 @@
 ---
 title: Congress Bills
 source: https://www.cs.cornell.edu/~arb/data/congress-bills/
-citation: |
-  @article{Benson-2018-simplicial,
-    author = {Benson, Austin R. and Abebe, Rediet and Schaub, Michael T. and Jadbabaie, Ali and Kleinberg, Jon},
-    title = {Simplicial closure and higher-order link prediction},
-    year = {2018},
-    doi = {10.1073/pnas.1800683115},
-    publisher = {National Academy of Sciences},
-    issn = {0027-8424},
-    journal = {Proceedings of the National Academy of Sciences}
-  }
-  @article{Fowler-2006-connecting,
-    doi = {10.1093/pan/mpl002},
-    url = {https://doi.org/10.1093/pan/mpl002},
-    year  = {2006},
-    publisher = {Cambridge University Press ({CUP})},
-    volume = {14},
-    number = {04},
-    pages = {456--487},
-    author = {James H. Fowler},
-    title = {Connecting the Congress: A Study of Cosponsorship Networks},
-    journal = {Political Analysis}
-  }
-  @article{Fowler-2006-cosponsorship,
-    doi = {10.1016/j.socnet.2005.11.003},
-    url = {https://doi.org/10.1016/j.socnet.2005.11.003},
-    year  = {2006},
-    month = {oct},
-    publisher = {Elsevier {BV}},
-    volume = {28},
-    number = {4},
-    pages = {454--465},
-    author = {James H. Fowler},
-    title = {Legislative cosponsorship networks in the {US} House and Senate},
-    journal = {Social Networks}
-  }
+citation:
+  - 10.1073/pnas.1800683115
+  - 10.1093/pan/mpl002
+  - 10.1016/j.socnet.2005.11.003
 license: UNKNOWN
 network-type: temporal
 tags:
