--- a/src/datasets/contact-high-school.mdx
+++ b/src/datasets/contact-high-school.mdx
@@ -1,29 +1,9 @@
 ---
 title: Contact High School
 source: https://www.cs.cornell.edu/~arb/data/contact-high-school/
-citation: |
-  @article{Benson-2018-simplicial,
-    author = {Benson, Austin R. and Abebe, Rediet and Schaub, Michael T. and Jadbabaie, Ali and Kleinberg, Jon},
-    title = {Simplicial closure and higher-order link prediction},
-    year = {2018},
-    doi = {10.1073/pnas.1800683115},
-    publisher = {National Academy of Sciences},
-    issn = {0027-8424},
-    journal = {Proceedings of the National Academy of Sciences}
-  }
-  @article{Mastrandrea-2015-contact,
-    doi = {10.1371/journal.pone.0136497},
-    url = {https://doi.org/10.1371/journal.pone.0136497},
-    year  = {2015},
-    publisher = {Public Library of Science ({PLoS})},
-    volume = {10},
-    number = {9},
-    pages = {e0136497},
-    author = {Rossana Mastrandrea and Julie Fournet and Alain Barrat},
-    editor = {Cecile Viboud},
-    title = {Contact Patterns in a High School: A Comparison between Data Collected Using Wearable Sensors,  Contact Diaries and Friendship Surveys},
-    journal = {{PLOS} {ONE}}
-  }
+citation:
+  - 10.1073/pnas.1800683115
+  - 10.1371/journal.pone.0136497
 license: UNKNOWN
 network-type: temporal
 related:
