--- a/src/datasets/contact-primary-school.mdx
+++ b/src/datasets/contact-primary-school.mdx
@@ -1,29 +1,9 @@
 ---
 title: Contact Primary School
 source: https://www.cs.cornell.edu/~arb/data/contact-primary-school/
-citation: |
-  @article{Benson-2018-simplicial,
-    author = {Benson, Austin R. and Abebe, Rediet and Schaub, Michael T. and Jadbabaie, Ali and Kleinberg, Jon},
-    title = {Simplicial closure and higher-order link prediction},
-    year = {2018},
-    doi = {10.1073/pnas.1800683115},
-    publisher = {National Academy of Sciences},
-    issn = {0027-8424},
-    journal = {Proceedings of the National Academy of Sciences}
-  }
-  @article{Stehl-2011-contact,
-    doi = {10.1371/journal.pone.0023176},
-    url = {https://doi.org/10.1371/journal.pone.0023176},
-    year  = {2011},
-    publisher = {Public Library of Science ({PLoS})},
-    volume = {6},
-    number = {8},
-    pages = {e23176},
-    author = {Juliette Stehl{\'{e}} and Nicolas Voirin and Alain Barrat and Ciro Cattuto and Lorenzo Isella and Jean-Fran{\c{c}}ois Pinton and Marco Quaggiotto and Wouter Van den Broeck and Corinne R{\'{e}}gis and Bruno Lina and Philippe Vanhems},
-    editor = {C{\'{e}}cile Viboud},
-    title = {High-Resolution Measurements of Face-to-Face Contact Patterns in a Primary School},
-    journal = {{PLoS} {ONE}}
-  }
+citation:
+  - 10.1073/pnas.1800683115
+  - 10.1371/journal.pone.0023176
 license: UNKNOWN
 network-type: temporal
 tags:
