--- a/src/datasets/house-committees.mdx
+++ b/src/datasets/house-committees.mdx
@@ -1,14 +1,8 @@
 ---
 title: House Committees
 source: https://www.cs.cornell.edu/~arb/data/house-committees/
-citation: |
-  @article{chodrow2021hypergraph,
-    title={Hypergraph clustering: from blockmodels to modularity},
-    author={Chodrow, Philip S and Veldt, Nate and Benson, Austin R},
-    journal={Science Advances},
-    year={2021},
-    doi={10.1126/sciadv.abh1303}
-  }
+citation:
+  - 10.1126/sciadv.abh1303
 network-type: hypergraph
 tags:
   - undirected
