--- a/src/datasets/senate-bills.mdx
+++ b/src/datasets/senate-bills.mdx
@@ -1,37 +1,10 @@
 ---
 title: Senate Bills
 source: https://www.cs.cornell.edu/~arb/data/senate-bills/
-citation: |
-  @article{chodrow2021hypergraph,
-    title={Hypergraph clustering: from blockmodels to modularity},
-    author={Chodrow, Philip S and Veldt, Nate and Benson, Austin R},
-    journal={Science Advances},
-    year={2021},
-    doi={10.1126/sciadv.abh1303}
-  }
-  @article{Fowler-2006-connecting,
-    doi = {10.1093/pan/mpl002},
-    year  = {2006},
-    publisher = {Cambridge University Press ({CUP})},
-    volume = {14},
-    number = {04},
-    pages = {456--487},
-    author = {James H. Fowler},
-    title = {Connecting the Congress: A Study of Cosponsorship Networks},
-    journal = {Political Analysis}
-  }
-  @article{Fowler-2006-cosponsorship,
-    doi = {10.1016/j.socnet.2005.11.003},
-    year  = {2006},
-    month = {oct},
-    publisher = {Elsevier {BV}},
-    volume = {28},
-    number = {4},
-    pages = {454--465},
-    author = {James H. Fowler},
-    title = {Legislative cosponsorship networks in the {US} House and Senate},
-    journal = {Social Networks}
-  }
+citation:
+  - 10.1126/sciadv.abh1303
+  - 10.1093/pan/mpl002
+  - 10.1016/j.socnet.2005.11.003
 network-type: hypergraph
 tags:
   - undirected
