--- a/src/datasets/senate-committees.mdx
+++ b/src/datasets/senate-committees.mdx
@@ -1,15 +1,8 @@
 ---
 title: Senate Committees
 source: https://www.cs.cornell.edu/~arb/data/senate-committees/
-citation: |
-  @inproceedings{ni2019justifying,
-    title={Justifying Recommendations using Distantly-Labeled Reviews and Fine-Grained Aspects},
-    author={Ni, Jianmo and Li, Jiacheng and McAuley, Julian},
-    booktitle={Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)},
-    pages={188--197},
-    year={2019},
-    doi={10.18653/v1/D19-1018}
-  }
+citation:
+  - 10.18653/v1/D19-1018
 network-type: hypergraph
 tags:
   - undirected
