--- a/src/datasets/trivago-clicks.mdx
+++ b/src/datasets/trivago-clicks.mdx
@@ -1,15 +1,8 @@
 ---
 title: Trivago Clicks
 source: https://www.cs.cornell.edu/~arb/data/trivago-clicks/
-citation: |
-  @inproceedings{Veldt-2020-local,
-    title   = {Minimizing Localized Ratio Cut Objectives in Hypergraphs},
-    author  = {Veldt, Nate and Benson, Austin R. and Kleinberg, Jon},
-    publisher = {{ACM} Press},
-    booktitle = {Proceedings of the 26th {ACM} {SIGKDD} International Conference on Knowledge Discovery and Data Mining},
-    year    = {2020},
-    doi={10.1145/3394486.3403222}
-  }
+citation:
+  - 10.1145/3394486.3403222
 network-type: hypergraph
 tags:
   - undirected
