--- a/src/datasets/walmart-trips.mdx
+++ b/src/datasets/walmart-trips.mdx
@@ -1,14 +1,8 @@
 ---
 title: Walmart Trips
 source: https://www.cs.cornell.edu/~arb/data/walmart-trips/
-citation: |
-  @inproceedings{Amburg-2020-categorical,
-    title   = {Clustering in graphs and hypergraphs with categorical edge labels},
-    author  = {Amburg, Ilya and Veldt, Nate and Benson, Austin R.},
-    booktitle = {Proceedings of the Web Conference},
-    year    = {2020},
-    doi={10.1145/3366423.3380152}
-  }
+citation:
+  - 10.1145/3366423.3380152
 network-type: hypergraph
 tags:
   - undirected
