--- a/src/app/about/page.mdx
+++ b/src/app/about/page.mdx
@@ -11,28 +11,29 @@ This repository is designed to facilitate research and development in the field 
 
 The project is similar in spirit to graph repositories like [ICON](https://icon.colorado.edu/), [SNAP](https://snap.stanford.edu/), and [Netzschleuder](https://networks.skewed.de/) but specifically tailored for higher-order datasets.
 
-## Licensing
-
-- Not all licenses will allow us to distribute third-party datasets on our site
-  - Sometimes distribution may be allowed, but alternation (our own data format!) may be disallowed.
-
 ## White Paper
 
-TODO
+We are in the process of writing a white paper that details the design principles, data formats, and usage guidelines for AHORN.
+You can cite this upcoming white paper if you talk about the AHORN project in particular.
+However, it is not our intention to intercept citations for the primary dataset source, so please cite the papers indicated on the datasheet if you refer to a specific dataset.
 
-[Contributing](/about/contributing)
+## Licensing
+
+The datasets provided through AHORN consist of processed versions of data from original sources, made available under the premise that such dissemination aligns with the original authors' intent to promote open scientific research and knowledge sharing.
+Should any dataset not conform to this principle, we encourage affected parties to contact us so that appropriate measures can be taken to address the matter.
+The upstream sources are always cited on the respective datasheet, and we encourage users to refer to the original publications when utilizing the datasets.
 
 ## Team
 
-<ul className="not-prose grid gap-x-8 gap-y-12 sm:grid-cols-2 sm:gap-y-16 xl:col-span-2">
+<ul className="not-prose grid gap-8 sm:grid-cols-2 xl:col-span-2">
   <li>
-    <Person name="Michael T. Schaub" role="Professor" />
+    <Person name="Michael T. Schaub" role="Professor" avatar="https://github.com/michaelschaub.png?size=64" />
   </li>
   <li>
-    <Person name="Florian Frantzen" role="PhD Student" />
+    <Person name="Florian Frantzen" role="PhD Student" avatar="https://github.com/ffl096.png?size=64" />
   </li>
   <li>
-    <Person name="Josef Hoppe" role="PhD Student" />
+    <Person name="Josef Hoppe" role="PhD Student" avatar="https://github.com/josefhoppe.png?size=64" />
   </li>
 </ul>
 
