--- a/src/app/about/page.mdx
+++ b/src/app/about/page.mdx
@@ -19,8 +19,8 @@ However, it is not our intention to intercept citations for the primary dataset 
 
 ## Licensing
 
-The datasets provided through AHORN consist of processed versions of data from original sources, made available under the premise that such dissemination aligns with the original authors' intent to promote open scientific research and knowledge sharing.
-Should any dataset not conform to this principle, we encourage affected parties to contact us so that appropriate measures can be taken to address the matter.
+The datasets provided through AHORN consist of processed versions of data from original sources, made available under the premise that such redistribution aligns with the original authors' intent to promote open scientific research and knowledge sharing.
+Should any author wish to not have their datasets listed in this repository, we encourage them to contact us so that we can take appropriate action.
 The upstream sources are always cited on the respective datasheet, and we encourage users to refer to the original publications when utilizing the datasets.
 
 ## Team
