--- a/src/app/tools/page.mdx
+++ b/src/app/tools/page.mdx
@@ -22,7 +22,7 @@ export const tools = [
   },
 ];
 
-<div className="prose max-w-full dark:prose-invert"data-pagefind-body>
+<div className="prose max-w-full"data-pagefind-body>
 
 # Tools
 
