Add number of nodes to dataset list

--- a/src/datasets/MAG-10.mdx
+++ b/src/datasets/MAG-10.mdx
@@ -8,6 +8,8 @@ network-type: hypergraph
 tags:
   - edge labels
   - 'source: benson'
+statistics:
+  num-nodes: 80198
 shape:
   nodes: 80198
   hyperedges: 51889
