--- a/src/datasets/algebra-questions.mdx
+++ b/src/datasets/algebra-questions.mdx
@@ -12,6 +12,8 @@ network-type: hypergraph
 tags:
   - edge labels
   - 'source: benson'
+statistics:
+  num-nodes: 423
 related:
   - geometry-questions
 shape:
