--- a/src/datasets/contact-primary-school.mdx
+++ b/src/datasets/contact-primary-school.mdx
@@ -116,6 +116,8 @@ attachments:
   dataset:
     url: https://zenodo.org/records/17092521/files/contact-primary-school.txt?download=1
     size: 4860730
+statistics:
+  num-nodes: 242
 ---
 
 import TemporalShapeChart from "@/components/chart/temporal-shape";
