--- a/src/datasets/cooking.mdx
+++ b/src/datasets/cooking.mdx
@@ -7,6 +7,8 @@ network-type: hypergraph
 tags:
   - edge labels
   - 'source: benson'
+statistics:
+  num-nodes: 6714
 shape:
   nodes: 6714
   hyperedges: 39774
