--- a/src/datasets/house-bills.mdx
+++ b/src/datasets/house-bills.mdx
@@ -10,6 +10,8 @@ tags:
   - undirected
   - labelled nodes
   - 'source: benson'
+statistics:
+  num-nodes: 1494
 label-count:
   Democrat: 792
   Republican: 702
