--- a/src/datasets/house-committees.mdx
+++ b/src/datasets/house-committees.mdx
@@ -8,6 +8,8 @@ tags:
   - undirected
   - labelled nodes
   - 'source: benson'
+statistics:
+  num-nodes: 1290
 related:
   - house-bills
   - senate-committees
