--- a/src/datasets/senate-committees.mdx
+++ b/src/datasets/senate-committees.mdx
@@ -8,6 +8,8 @@ tags:
   - undirected
   - labelled nodes
   - 'source: benson'
+statistics:
+  num-nodes: 282
 related:
   - senate-bills
   - house-committees
