--- a/src/datasets/stackoverflow-answers.mdx
+++ b/src/datasets/stackoverflow-answers.mdx
@@ -1,5 +1,6 @@
 ---
 title: StackOverflow Answers
+disable: true
 source: https://www.cs.cornell.edu/~arb/data/stackoverflow-answers/
 citation: |
   @inproceedings{Veldt-2020-local,
