--- a/src/datasets/trivago-clicks.mdx
+++ b/src/datasets/trivago-clicks.mdx
@@ -8,6 +8,8 @@ tags:
   - undirected
   - labelled nodes
   - 'source: benson'
+statistics:
+  num-nodes: 172738
 label-count:
   India: 9963
   El Salvador: 51
