--- a/src/datasets/vegas-bars-reviews.mdx
+++ b/src/datasets/vegas-bars-reviews.mdx
@@ -13,6 +13,8 @@ tags:
   - edge labels
   - reviews
   - 'source: benson'
+statistics:
+  num-nodes: 1234
 shape:
   nodes: 1234
   hyperedges: 1194
