--- a/src/datasets/walmart-trips.mdx
+++ b/src/datasets/walmart-trips.mdx
@@ -8,6 +8,8 @@ tags:
   - undirected
   - labelled nodes
   - 'source: benson'
+statistics:
+  num-nodes: 88860
 label-count:
   Food, Household & Pets: 26178
   Other: 4209
