--- a/src/datasets/contact-high-school.mdx
+++ b/src/datasets/contact-high-school.mdx
@@ -215,6 +215,8 @@ attachments:
   dataset:
     url: https://zenodo.org/records/16837446/files/contact-high-school.txt?download=1
     size: 7788202
+statistics:
+  num-nodes: 327
 ---
 
 import TemporalShapeChart from "@/components/chart/temporal-shape";
