--- a/src/datasets/mathoverflow-answers.mdx
+++ b/src/datasets/mathoverflow-answers.mdx
@@ -8,6 +8,8 @@ tags:
   - undirected
   - labelled nodes
   - 'source: benson'
+statistics:
+  num-nodes: 73851
 related:
   - stackoverflow-answers
 label-count:
