Add `NDC-classes` dataset

--- a/src/datasets/congress-bills.mdx
+++ b/src/datasets/congress-bills.mdx
@@ -1,5 +1,6 @@
 ---
 title: Congress Bills
+disable: true
 source: https://www.cs.cornell.edu/~arb/data/congress-bills/
 citation:
   - 10.1073/pnas.1800683115
