--- a/src/app/tools/page.mdx
+++ b/src/app/tools/page.mdx
@@ -22,7 +22,7 @@ export const tools = [
   },
 ];
 
-<div className="prose max-w-full"data-pagefind-body>
+<div className="prose max-w-full dark:prose-invert" data-pagefind-body>
 
 # Tools
 
@@ -51,7 +51,7 @@ For a more convenient experience, we also provide the Python package [`ahorn-loa
           role="presentation"
         />
       </a>
-      <div className="prose">
+      <div className="prose dark:prose-invert">
         <h3>
           <a href={tool.link} target="_blank">{tool.name}</a>
         </h3>
