--- a/src/datasets/NDC-classes.mdx
+++ b/src/datasets/NDC-classes.mdx
@@ -2,7 +2,7 @@
 title: NDC Classes
 source: https://www.cs.cornell.edu/~arb/data/NDC-classes/
 citation:
-  - 10.1073/pnas.1800683115
+- 10.1073/pnas.1800683115
 tags:
 - undirected
 - temporal
@@ -11,7 +11,7 @@ related:
 - NDC-substances
 attachments:
   dataset:
-    url: https://zenodo.org/records/17607716/files/NDC-classes.txt.gz?download=1
+    url: NDC-classes.txt.gz
     size: 506164
 shape:
   '1900-01-02': 3
@@ -5908,10 +5908,262 @@ shape:
 statistics:
   num-nodes: 1161
   num-edges: 49726
+  node-degrees:
+    1: 166
+    2: 107
+    3: 58
+    4: 59
+    5: 36
+    6: 25
+    7: 25
+    8: 28
+    9: 13
+    10: 10
+    11: 19
+    12: 7
+    13: 17
+    14: 9
+    15: 13
+    16: 7
+    17: 7
+    18: 18
+    19: 4
+    20: 6
+    21: 5
+    22: 2
+    23: 2
+    24: 8
+    25: 5
+    26: 10
+    27: 3
+    28: 3
+    29: 11
+    30: 1
+    31: 5
+    32: 1
+    33: 2
+    34: 8
+    35: 5
+    36: 8
+    37: 3
+    38: 1
+    39: 1
+    40: 8
+    41: 6
+    42: 8
+    43: 3
+    45: 6
+    46: 5
+    47: 8
+    49: 1
+    50: 3
+    51: 3
+    52: 7
+    53: 2
+    56: 6
+    57: 7
+    58: 9
+    59: 2
+    61: 3
+    62: 1
+    63: 5
+    64: 3
+    65: 8
+    66: 2
+    67: 3
+    68: 2
+    70: 1
+    71: 1
+    72: 1
+    74: 1
+    77: 3
+    79: 1
+    81: 2
+    84: 4
+    85: 1
+    89: 4
+    91: 5
+    94: 1
+    95: 2
+    96: 2
+    97: 2
+    98: 7
+    99: 5
+    100: 2
+    101: 4
+    102: 1
+    103: 1
+    105: 5
+    106: 1
+    107: 2
+    108: 1
+    109: 3
+    110: 2
+    111: 1
+    112: 2
+    116: 2
+    119: 5
+    120: 1
+    123: 2
+    124: 1
+    126: 2
+    128: 2
+    129: 2
+    131: 1
+    132: 3
+    135: 1
+    136: 2
+    137: 4
+    138: 1
+    143: 2
+    144: 1
+    145: 1
+    146: 2
+    149: 1
+    150: 5
+    152: 2
+    157: 1
+    159: 1
+    161: 2
+    164: 1
+    165: 3
+    169: 3
+    170: 1
+    172: 4
+    176: 3
+    178: 2
+    184: 3
+    186: 1
+    188: 2
+    191: 3
+    192: 2
+    193: 2
+    195: 1
+    196: 3
+    202: 3
+    204: 1
+    205: 1
+    206: 1
+    215: 1
+    216: 1
+    217: 2
+    218: 2
+    219: 2
+    221: 4
+    222: 1
+    225: 3
+    226: 2
+    234: 1
+    235: 1
+    236: 2
+    237: 1
+    238: 1
+    239: 1
+    241: 1
+    247: 1
+    255: 1
+    256: 1
+    260: 4
+    262: 1
+    266: 3
+    268: 1
+    272: 2
+    281: 1
+    283: 2
+    290: 3
+    293: 2
+    297: 1
+    298: 1
+    299: 2
+    300: 1
+    310: 4
+    314: 3
+    315: 2
+    319: 1
+    321: 2
+    324: 1
+    327: 2
+    332: 1
+    338: 2
+    343: 3
+    347: 2
+    350: 1
+    360: 1
+    369: 1
+    371: 1
+    374: 2
+    376: 2
+    391: 2
+    395: 2
+    397: 1
+    399: 3
+    416: 1
+    419: 1
+    422: 1
+    431: 1
+    441: 3
+    463: 2
+    464: 1
+    486: 1
+    499: 3
+    515: 1
+    533: 2
+    540: 2
+    541: 1
+    545: 1
+    568: 1
+    576: 2
+    578: 2
+    581: 1
+    585: 1
+    589: 1
+    617: 2
+    633: 2
+    665: 1
+    681: 1
+    699: 1
+    712: 2
+    720: 1
+    737: 1
+    755: 1
+    757: 1
+    812: 1
+    845: 2
+    850: 1
+    967: 1
+    970: 2
+    973: 2
+    1101: 1
+    1102: 2
+    1103: 1
+    1113: 2
+    1177: 1
+    1185: 1
+    1196: 2
+    1231: 1
+    1245: 1
+    1313: 1
+    1330: 2
+    1390: 1
+    1411: 1
+    1417: 1
+    1466: 1
+    1530: 2
+    1629: 1
+    1753: 1
+    1946: 3
+    2087: 1
+    2169: 1
+    2639: 1
+    2764: 1
+    3992: 1
+    5351: 1
+    5358: 2
 ---
 
 import Stat from "@/components/stat";
 import LineChart from "@/components/chart/line-chart";
+import DegreeLineChart from "@/components/chart/degree-line-chart";
 import { formatNumber } from "@/utils/format";
 
 This is a temporal higher-order network dataset, which here means a sequence of timestamped simplices where each simplex is a set of nodes.
@@ -5930,6 +6182,10 @@ Timestamps are in days and represent when the drug was first marketed.
   />
   <Stat title="Hyperedge Type" value="Drug" />
 </dl>
+
+## Node Degrees
+
+<DegreeLineChart histogram={frontmatter["statistics"]["node-degrees"]} />
 
 ## Hyperedges
 
