--- a/src/datasets/NDC-substances.mdx
+++ b/src/datasets/NDC-substances.mdx
@@ -2,7 +2,7 @@
 title: NDC Substances
 source: https://www.cs.cornell.edu/~arb/data/NDC-substances/
 citation:
-  - 10.1073/pnas.1800683115
+- 10.1073/pnas.1800683115
 tags:
 - undirected
 - temporal
@@ -12,9 +12,374 @@ related:
 statistics:
   num-nodes: 5556
   num-edges: 112919
+  node-degrees:
+    1: 1229
+    2: 672
+    3: 394
+    4: 299
+    5: 202
+    6: 218
+    7: 150
+    8: 125
+    9: 114
+    10: 107
+    11: 92
+    12: 84
+    13: 71
+    14: 71
+    15: 62
+    16: 54
+    17: 53
+    18: 44
+    19: 57
+    20: 49
+    21: 47
+    22: 38
+    23: 37
+    24: 27
+    25: 27
+    26: 21
+    27: 28
+    28: 25
+    29: 16
+    30: 29
+    31: 23
+    32: 28
+    33: 20
+    34: 26
+    35: 23
+    36: 15
+    37: 20
+    38: 19
+    39: 26
+    40: 14
+    41: 11
+    42: 12
+    43: 10
+    44: 10
+    45: 22
+    46: 11
+    47: 13
+    48: 8
+    49: 16
+    50: 8
+    51: 8
+    52: 17
+    53: 7
+    54: 11
+    55: 10
+    56: 8
+    57: 7
+    58: 7
+    59: 6
+    60: 6
+    61: 14
+    62: 8
+    63: 8
+    64: 3
+    65: 6
+    66: 9
+    67: 11
+    68: 9
+    69: 7
+    70: 9
+    71: 6
+    72: 2
+    73: 11
+    74: 4
+    75: 9
+    76: 6
+    77: 8
+    78: 3
+    79: 9
+    80: 5
+    81: 12
+    82: 9
+    83: 3
+    84: 3
+    85: 6
+    86: 1
+    87: 5
+    88: 3
+    89: 11
+    90: 6
+    91: 5
+    92: 3
+    93: 5
+    94: 8
+    95: 6
+    96: 1
+    97: 4
+    98: 2
+    99: 7
+    100: 4
+    101: 3
+    102: 2
+    103: 4
+    104: 3
+    105: 5
+    106: 5
+    107: 7
+    108: 6
+    109: 5
+    110: 4
+    111: 2
+    112: 7
+    113: 2
+    114: 3
+    115: 2
+    116: 2
+    117: 2
+    118: 2
+    119: 4
+    120: 3
+    121: 1
+    123: 2
+    124: 4
+    125: 1
+    126: 2
+    127: 5
+    128: 5
+    129: 1
+    130: 1
+    131: 3
+    132: 2
+    133: 3
+    134: 2
+    135: 2
+    136: 2
+    137: 3
+    138: 1
+    139: 2
+    140: 3
+    143: 1
+    144: 2
+    145: 2
+    146: 1
+    147: 2
+    148: 2
+    149: 2
+    150: 1
+    151: 2
+    152: 2
+    153: 2
+    154: 1
+    155: 4
+    156: 3
+    157: 2
+    158: 1
+    159: 3
+    160: 4
+    161: 2
+    162: 2
+    164: 2
+    165: 2
+    166: 3
+    167: 1
+    168: 1
+    169: 2
+    170: 3
+    171: 3
+    172: 2
+    173: 2
+    174: 2
+    175: 1
+    176: 1
+    177: 1
+    180: 3
+    181: 2
+    184: 1
+    185: 3
+    186: 4
+    187: 2
+    188: 3
+    189: 3
+    190: 1
+    192: 3
+    193: 1
+    194: 2
+    195: 3
+    196: 2
+    197: 1
+    198: 1
+    199: 1
+    200: 2
+    203: 1
+    204: 2
+    205: 1
+    207: 2
+    208: 3
+    209: 2
+    210: 2
+    212: 2
+    214: 4
+    215: 1
+    217: 1
+    218: 2
+    219: 1
+    221: 2
+    222: 3
+    223: 5
+    224: 1
+    225: 1
+    226: 3
+    227: 1
+    228: 3
+    230: 1
+    232: 1
+    233: 1
+    234: 2
+    236: 1
+    237: 1
+    239: 4
+    240: 2
+    246: 1
+    248: 2
+    249: 2
+    250: 2
+    252: 1
+    254: 2
+    255: 1
+    256: 1
+    257: 1
+    258: 1
+    260: 1
+    261: 2
+    262: 1
+    264: 2
+    266: 2
+    267: 1
+    274: 1
+    277: 1
+    278: 1
+    281: 1
+    282: 1
+    283: 1
+    284: 1
+    290: 2
+    293: 3
+    294: 1
+    296: 1
+    297: 1
+    298: 1
+    300: 1
+    302: 2
+    304: 1
+    308: 1
+    309: 2
+    310: 1
+    315: 2
+    316: 1
+    319: 1
+    320: 2
+    321: 1
+    325: 1
+    326: 2
+    332: 1
+    333: 1
+    335: 1
+    336: 1
+    344: 1
+    354: 1
+    356: 1
+    357: 1
+    359: 1
+    361: 1
+    362: 1
+    363: 1
+    366: 1
+    370: 1
+    373: 3
+    374: 1
+    386: 1
+    388: 1
+    396: 1
+    403: 1
+    405: 1
+    410: 1
+    412: 1
+    414: 1
+    420: 1
+    423: 1
+    426: 1
+    428: 1
+    429: 1
+    433: 1
+    445: 1
+    448: 1
+    454: 1
+    464: 1
+    465: 1
+    466: 1
+    474: 1
+    481: 1
+    503: 1
+    511: 1
+    512: 1
+    516: 1
+    520: 1
+    522: 1
+    535: 1
+    537: 1
+    540: 1
+    550: 1
+    551: 1
+    559: 1
+    565: 1
+    578: 1
+    584: 1
+    598: 1
+    599: 2
+    603: 1
+    609: 1
+    621: 1
+    627: 1
+    631: 1
+    640: 1
+    678: 1
+    695: 1
+    709: 1
+    742: 1
+    781: 1
+    821: 1
+    829: 1
+    832: 1
+    845: 1
+    861: 1
+    867: 1
+    894: 1
+    901: 1
+    998: 1
+    1000: 1
+    1021: 1
+    1047: 1
+    1060: 1
+    1094: 1
+    1114: 1
+    1132: 1
+    1242: 1
+    1260: 1
+    1313: 1
+    1315: 1
+    1429: 1
+    1443: 1
+    1616: 1
+    1718: 1
+    2192: 1
+    2470: 1
+    2561: 1
+    2566: 1
+    2595: 1
+    2895: 1
+    2961: 1
+    3461: 1
+    3553: 1
+    4814: 1
+    5007: 1
+    6693: 1
 attachments:
   dataset:
-    url: https://zenodo.org/records/17607718/files/NDC-substances.txt.gz?download=1
+    url: NDC-substances.txt.gz
     size: 1645221
 shape:
   '1900-01-02': 6
@@ -7756,6 +8121,7 @@ shape:
 
 import Stat from "@/components/stat";
 import LineChart from "@/components/chart/line-chart";
+import DegreeLineChart from "@/components/chart/degree-line-chart";
 import { formatNumber } from "@/utils/format";
 
 This is a temporal higher-order network dataset, which here means a sequence of timestamped simplices where each simplex is a set of nodes.
@@ -7774,6 +8140,10 @@ Timestamps are in days and represent when the drug was first marketed.
   />
   <Stat title="Hyperedge Type" value="Drug" />
 </dl>
+
+## Node Degrees
+
+<DegreeLineChart histogram={frontmatter["statistics"]["node-degrees"]} />
 
 ## Hyperedges
 
