--- a/src/datasets/coauth-DBLP.mdx
+++ b/src/datasets/coauth-DBLP.mdx
@@ -2,7 +2,7 @@
 title: coauth-DBLP
 source: https://www.cs.cornell.edu/~arb/data/coauth-DBLP/
 citation:
-  - 10.1073/pnas.1800683115
+- 10.1073/pnas.1800683115
 tags:
 - undirected
 - weighted
@@ -14,9 +14,620 @@ related:
 statistics:
   num-nodes: 1930378
   num-edges: 3700681
+  node-degrees:
+    1: 974164
+    2: 304472
+    3: 151374
+    4: 93235
+    5: 63921
+    6: 47332
+    7: 36562
+    8: 29260
+    9: 23849
+    10: 19873
+    11: 16558
+    12: 13976
+    13: 12016
+    14: 10453
+    15: 9178
+    16: 8137
+    17: 7354
+    18: 6435
+    19: 5840
+    20: 5229
+    21: 4797
+    22: 4351
+    23: 3845
+    24: 3610
+    25: 3350
+    26: 3173
+    27: 2935
+    28: 2752
+    29: 2501
+    30: 2344
+    31: 2240
+    32: 2004
+    33: 1921
+    34: 1814
+    35: 1752
+    36: 1594
+    37: 1579
+    38: 1479
+    39: 1495
+    40: 1280
+    41: 1195
+    42: 1297
+    43: 1156
+    44: 1112
+    45: 1026
+    46: 979
+    47: 942
+    48: 958
+    49: 879
+    50: 854
+    51: 830
+    52: 731
+    53: 733
+    54: 741
+    55: 693
+    56: 639
+    57: 647
+    58: 586
+    59: 590
+    60: 583
+    61: 574
+    62: 534
+    63: 549
+    64: 537
+    65: 513
+    66: 453
+    67: 489
+    68: 427
+    69: 409
+    70: 380
+    71: 389
+    72: 367
+    73: 424
+    74: 391
+    75: 398
+    76: 346
+    77: 346
+    78: 334
+    79: 311
+    80: 333
+    81: 297
+    82: 298
+    83: 310
+    84: 275
+    85: 264
+    86: 279
+    87: 225
+    88: 221
+    89: 241
+    90: 221
+    91: 236
+    92: 230
+    93: 198
+    94: 221
+    95: 199
+    96: 228
+    97: 183
+    98: 178
+    99: 167
+    100: 184
+    101: 197
+    102: 177
+    103: 210
+    104: 173
+    105: 186
+    106: 183
+    107: 179
+    108: 155
+    109: 163
+    110: 134
+    111: 120
+    112: 137
+    113: 124
+    114: 100
+    115: 131
+    116: 138
+    117: 129
+    118: 119
+    119: 118
+    120: 122
+    121: 109
+    122: 114
+    123: 97
+    124: 114
+    125: 95
+    126: 95
+    127: 105
+    128: 108
+    129: 113
+    130: 97
+    131: 82
+    132: 105
+    133: 88
+    134: 97
+    135: 79
+    136: 83
+    137: 74
+    138: 83
+    139: 68
+    140: 76
+    141: 75
+    142: 76
+    143: 65
+    144: 83
+    145: 51
+    146: 73
+    147: 81
+    148: 67
+    149: 57
+    150: 67
+    151: 62
+    152: 62
+    153: 64
+    154: 63
+    155: 60
+    156: 54
+    157: 52
+    158: 52
+    159: 61
+    160: 54
+    161: 53
+    162: 48
+    163: 44
+    164: 57
+    165: 47
+    166: 50
+    167: 44
+    168: 59
+    169: 47
+    170: 46
+    171: 49
+    172: 43
+    173: 44
+    174: 51
+    175: 47
+    176: 56
+    177: 34
+    178: 42
+    179: 41
+    180: 33
+    181: 36
+    182: 39
+    183: 36
+    184: 40
+    185: 33
+    186: 26
+    187: 26
+    188: 36
+    189: 40
+    190: 31
+    191: 29
+    192: 36
+    193: 36
+    194: 31
+    195: 36
+    196: 34
+    197: 30
+    198: 29
+    199: 27
+    200: 29
+    201: 16
+    202: 24
+    203: 30
+    204: 32
+    205: 27
+    206: 22
+    207: 20
+    208: 21
+    209: 29
+    210: 28
+    211: 28
+    212: 34
+    213: 23
+    214: 15
+    215: 28
+    216: 14
+    217: 18
+    218: 14
+    219: 25
+    220: 15
+    221: 29
+    222: 21
+    223: 17
+    224: 22
+    225: 22
+    226: 30
+    227: 28
+    228: 15
+    229: 22
+    230: 18
+    231: 18
+    232: 16
+    233: 17
+    234: 12
+    235: 21
+    236: 16
+    237: 23
+    238: 17
+    239: 7
+    240: 10
+    241: 19
+    242: 10
+    243: 17
+    244: 8
+    245: 14
+    246: 17
+    247: 19
+    248: 15
+    249: 14
+    250: 11
+    251: 8
+    252: 18
+    253: 6
+    254: 11
+    255: 14
+    256: 10
+    257: 13
+    258: 12
+    259: 7
+    260: 12
+    261: 10
+    262: 9
+    263: 9
+    264: 15
+    265: 8
+    266: 11
+    267: 10
+    268: 9
+    269: 12
+    270: 6
+    271: 9
+    272: 14
+    273: 5
+    274: 10
+    275: 10
+    276: 8
+    277: 2
+    278: 11
+    279: 11
+    280: 11
+    281: 15
+    282: 9
+    283: 12
+    284: 14
+    285: 13
+    286: 4
+    287: 10
+    288: 9
+    289: 5
+    290: 9
+    291: 11
+    292: 9
+    293: 13
+    294: 4
+    295: 9
+    296: 8
+    297: 7
+    298: 10
+    299: 6
+    300: 8
+    301: 7
+    302: 8
+    303: 3
+    304: 3
+    305: 7
+    306: 8
+    307: 2
+    308: 5
+    309: 10
+    310: 3
+    311: 8
+    312: 5
+    313: 8
+    314: 11
+    315: 9
+    316: 7
+    317: 6
+    318: 5
+    319: 7
+    320: 5
+    321: 3
+    322: 6
+    323: 7
+    324: 5
+    325: 8
+    326: 3
+    327: 5
+    328: 5
+    329: 6
+    330: 8
+    331: 5
+    332: 3
+    333: 2
+    334: 4
+    335: 9
+    336: 8
+    337: 3
+    338: 5
+    339: 2
+    340: 6
+    341: 3
+    342: 2
+    343: 4
+    344: 3
+    346: 4
+    347: 1
+    348: 7
+    349: 5
+    350: 1
+    351: 8
+    352: 2
+    353: 3
+    354: 7
+    355: 2
+    356: 5
+    357: 7
+    358: 6
+    359: 8
+    360: 6
+    361: 4
+    362: 4
+    363: 3
+    364: 4
+    365: 6
+    366: 1
+    367: 3
+    368: 2
+    369: 3
+    370: 3
+    371: 2
+    372: 6
+    373: 7
+    374: 6
+    375: 5
+    376: 4
+    377: 4
+    378: 4
+    380: 5
+    381: 3
+    382: 2
+    383: 2
+    384: 6
+    385: 1
+    386: 4
+    387: 5
+    388: 2
+    389: 2
+    390: 3
+    391: 3
+    392: 2
+    393: 1
+    394: 3
+    395: 5
+    396: 1
+    397: 3
+    398: 1
+    399: 3
+    400: 4
+    401: 5
+    402: 2
+    403: 4
+    404: 2
+    405: 1
+    406: 1
+    407: 8
+    408: 2
+    409: 3
+    410: 2
+    411: 2
+    412: 3
+    413: 2
+    414: 3
+    415: 4
+    416: 3
+    417: 4
+    418: 3
+    419: 4
+    421: 4
+    422: 1
+    423: 3
+    424: 6
+    425: 2
+    426: 2
+    427: 6
+    428: 3
+    429: 3
+    430: 2
+    431: 1
+    432: 1
+    433: 4
+    435: 4
+    436: 3
+    437: 5
+    438: 1
+    440: 2
+    441: 2
+    442: 1
+    443: 1
+    444: 1
+    445: 1
+    446: 1
+    448: 2
+    449: 2
+    450: 2
+    451: 1
+    452: 2
+    453: 1
+    456: 2
+    458: 2
+    459: 1
+    461: 4
+    462: 1
+    463: 3
+    464: 1
+    465: 2
+    467: 1
+    469: 1
+    470: 1
+    471: 2
+    473: 1
+    474: 3
+    475: 2
+    477: 1
+    478: 2
+    479: 1
+    480: 2
+    481: 2
+    484: 3
+    486: 2
+    487: 1
+    488: 1
+    489: 1
+    490: 1
+    492: 1
+    494: 2
+    495: 1
+    496: 2
+    497: 1
+    498: 1
+    500: 2
+    501: 2
+    502: 1
+    506: 1
+    509: 1
+    510: 1
+    511: 1
+    512: 2
+    514: 3
+    516: 2
+    519: 1
+    526: 1
+    528: 1
+    529: 1
+    532: 1
+    533: 1
+    537: 1
+    538: 1
+    540: 1
+    541: 1
+    543: 1
+    544: 1
+    545: 1
+    546: 1
+    548: 1
+    550: 2
+    552: 1
+    560: 1
+    564: 3
+    565: 3
+    567: 1
+    568: 2
+    570: 2
+    572: 1
+    575: 1
+    578: 1
+    579: 1
+    580: 1
+    581: 1
+    582: 2
+    583: 1
+    584: 1
+    585: 1
+    595: 3
+    596: 1
+    598: 1
+    605: 1
+    607: 1
+    608: 2
+    611: 2
+    612: 1
+    613: 1
+    615: 1
+    616: 1
+    617: 2
+    621: 2
+    622: 1
+    630: 1
+    631: 3
+    634: 1
+    635: 1
+    642: 1
+    643: 1
+    644: 1
+    647: 2
+    653: 1
+    657: 1
+    660: 2
+    664: 1
+    669: 1
+    670: 1
+    673: 1
+    675: 1
+    676: 2
+    678: 1
+    681: 1
+    682: 1
+    686: 1
+    690: 2
+    693: 1
+    695: 1
+    698: 1
+    699: 1
+    702: 1
+    704: 1
+    708: 2
+    713: 1
+    718: 2
+    720: 1
+    721: 1
+    722: 1
+    726: 1
+    732: 2
+    740: 1
+    750: 1
+    758: 1
+    762: 2
+    776: 1
+    778: 1
+    783: 1
+    789: 1
+    792: 1
+    795: 1
+    804: 1
+    809: 1
+    811: 1
+    824: 1
+    855: 1
+    858: 1
+    863: 1
+    865: 1
+    869: 1
+    871: 1
+    873: 1
+    878: 2
+    886: 1
+    890: 1
+    896: 1
+    902: 1
+    913: 1
+    928: 2
+    940: 1
+    949: 1
+    963: 1
+    973: 1
+    983: 1
+    1016: 1
+    1022: 1
+    1039: 1
+    1057: 1
+    1425: 1
 attachments:
   dataset:
-    url: https://zenodo.org/records/17600531/files/coauth-DBLP.txt.gz?download=1
+    url: coauth-DBLP.txt.gz
     size: 56430542
 shape:
   '1936': 12
@@ -107,6 +718,7 @@ shape:
 import Alert from "@/components/alert";
 import Stat from "@/components/stat";
 import LineChart from "@/components/chart/line-chart";
+import DegreeLineChart from "@/components/chart/degree-line-chart";
 import { formatNumber } from "@/utils/format";
 
 This is a temporal higher-order network dataset, which here means a sequence of timestamped simplices where each simplex is a set of nodes.
@@ -124,8 +736,12 @@ Timestamps are the year of publication.
     title="Hyperedges"
     value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
-  <Stat title="Hyperedge Type" value="Co-authored" />
+  <Stat title="Hyperedge Type" value="Co-authored Publications" />
 </dl>
+
+## Node Degrees
+
+<DegreeLineChart histogram={frontmatter["statistics"]["node-degrees"]} />
 
 ## Hyperedges
 
