--- a/src/datasets/coauth-MAG-Geology.mdx
+++ b/src/datasets/coauth-MAG-Geology.mdx
@@ -2,8 +2,8 @@
 title: coauth-MAG-Geology
 source: https://www.cs.cornell.edu/~arb/data/coauth-MAG-Geology/
 citation:
-  - 10.1073/pnas.1800683115
-  - 10.1145/2740908.2742839
+- 10.1073/pnas.1800683115
+- 10.1145/2740908.2742839
 tags:
 - undirected
 - weighted
@@ -15,9 +15,351 @@ related:
 statistics:
   num-nodes: 1261129
   num-edges: 1591166
+  node-degrees:
+    1: 769181
+    2: 184939
+    3: 83051
+    4: 48157
+    5: 31574
+    6: 22150
+    7: 16584
+    8: 12754
+    9: 10296
+    10: 8386
+    11: 7068
+    12: 5610
+    13: 5020
+    14: 4444
+    15: 3731
+    16: 3377
+    17: 3077
+    18: 2689
+    19: 2362
+    20: 2188
+    21: 1972
+    22: 1902
+    23: 1622
+    24: 1500
+    25: 1370
+    26: 1369
+    27: 1179
+    28: 1123
+    29: 1086
+    30: 948
+    31: 945
+    32: 863
+    33: 770
+    34: 754
+    35: 715
+    36: 662
+    37: 636
+    38: 577
+    39: 535
+    40: 516
+    41: 516
+    42: 486
+    43: 446
+    44: 426
+    45: 413
+    46: 413
+    47: 372
+    48: 311
+    49: 296
+    50: 348
+    51: 323
+    52: 318
+    53: 287
+    54: 261
+    55: 261
+    56: 239
+    57: 248
+    58: 242
+    59: 199
+    60: 246
+    61: 192
+    62: 191
+    63: 218
+    64: 171
+    65: 152
+    66: 168
+    67: 170
+    68: 164
+    69: 161
+    70: 141
+    71: 128
+    72: 131
+    73: 109
+    74: 136
+    75: 137
+    76: 111
+    77: 130
+    78: 111
+    79: 90
+    80: 110
+    81: 94
+    82: 104
+    83: 100
+    84: 81
+    85: 88
+    86: 90
+    87: 89
+    88: 92
+    89: 67
+    90: 78
+    91: 84
+    92: 79
+    93: 62
+    94: 70
+    95: 64
+    96: 64
+    97: 54
+    98: 69
+    99: 60
+    100: 51
+    101: 55
+    102: 44
+    103: 53
+    104: 46
+    105: 56
+    106: 60
+    107: 59
+    108: 40
+    109: 47
+    110: 45
+    111: 48
+    112: 30
+    113: 45
+    114: 48
+    115: 31
+    116: 46
+    117: 31
+    118: 38
+    119: 31
+    120: 41
+    121: 34
+    122: 33
+    123: 30
+    124: 31
+    125: 27
+    126: 33
+    127: 32
+    128: 20
+    129: 23
+    130: 25
+    131: 25
+    132: 24
+    133: 20
+    134: 21
+    135: 22
+    136: 24
+    137: 22
+    138: 20
+    139: 13
+    140: 20
+    141: 24
+    142: 5
+    143: 11
+    144: 19
+    145: 27
+    146: 17
+    147: 13
+    148: 10
+    149: 15
+    150: 20
+    151: 15
+    152: 14
+    153: 13
+    154: 16
+    155: 5
+    156: 12
+    157: 17
+    158: 15
+    159: 13
+    160: 8
+    161: 10
+    162: 12
+    163: 14
+    164: 5
+    165: 6
+    166: 13
+    167: 11
+    168: 12
+    169: 8
+    170: 11
+    171: 14
+    172: 7
+    173: 8
+    174: 10
+    175: 13
+    176: 12
+    177: 7
+    178: 13
+    179: 8
+    180: 4
+    181: 5
+    182: 12
+    183: 5
+    184: 9
+    185: 8
+    186: 7
+    187: 9
+    188: 7
+    189: 2
+    190: 6
+    191: 6
+    192: 9
+    193: 11
+    194: 6
+    195: 7
+    196: 5
+    197: 5
+    198: 5
+    199: 6
+    200: 6
+    201: 5
+    202: 7
+    203: 4
+    204: 5
+    205: 4
+    206: 6
+    207: 6
+    208: 3
+    209: 4
+    210: 3
+    211: 3
+    212: 3
+    213: 2
+    214: 9
+    215: 6
+    216: 6
+    217: 6
+    218: 8
+    219: 5
+    220: 4
+    221: 5
+    222: 1
+    223: 3
+    224: 2
+    225: 5
+    226: 5
+    227: 1
+    228: 2
+    229: 2
+    230: 2
+    231: 1
+    232: 3
+    233: 7
+    234: 2
+    235: 7
+    236: 6
+    237: 2
+    238: 2
+    239: 1
+    240: 2
+    242: 1
+    243: 1
+    244: 4
+    245: 4
+    246: 2
+    247: 1
+    248: 4
+    249: 4
+    250: 1
+    251: 1
+    253: 2
+    254: 2
+    255: 3
+    256: 1
+    257: 2
+    258: 2
+    260: 1
+    261: 1
+    262: 1
+    263: 2
+    264: 3
+    265: 1
+    267: 2
+    269: 3
+    270: 2
+    271: 2
+    272: 2
+    273: 2
+    274: 2
+    275: 2
+    276: 3
+    277: 1
+    278: 1
+    280: 2
+    281: 1
+    283: 1
+    284: 2
+    285: 4
+    287: 1
+    290: 3
+    291: 1
+    292: 1
+    295: 1
+    296: 2
+    297: 1
+    298: 2
+    300: 3
+    301: 1
+    302: 2
+    303: 3
+    304: 1
+    305: 1
+    306: 2
+    308: 2
+    309: 1
+    311: 3
+    315: 2
+    316: 2
+    318: 2
+    319: 1
+    321: 1
+    323: 2
+    325: 1
+    326: 1
+    327: 1
+    328: 1
+    331: 1
+    334: 1
+    336: 2
+    337: 1
+    339: 1
+    340: 1
+    341: 1
+    343: 1
+    346: 1
+    349: 2
+    350: 1
+    352: 2
+    358: 1
+    362: 1
+    366: 1
+    372: 1
+    376: 1
+    383: 1
+    386: 1
+    387: 1
+    388: 1
+    407: 1
+    413: 1
+    415: 1
+    423: 1
+    434: 1
+    437: 1
+    459: 1
+    470: 1
+    498: 1
+    524: 1
+    571: 1
+    661: 1
+    874: 1
+    1153: 1
 attachments:
   dataset:
-    url: https://zenodo.org/records/17600658/files/coauth-MAG-Geology.txt.gz?download=1
+    url: coauth-MAG-Geology.txt.gz
     size: 30311118
 shape:
   '1800': 12
@@ -230,6 +572,7 @@ shape:
 
 import Stat from "@/components/stat";
 import LineChart from "@/components/chart/line-chart";
+import DegreeLineChart from "@/components/chart/degree-line-chart";
 import { formatNumber } from "@/utils/format";
 
 This is a temporal higher-order network dataset, which here means a sequence of timestamped simplices where each simplex is a set of nodes.
@@ -245,8 +588,12 @@ Timestamps are the year of publication.
     title="Hyperedges"
     value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
-  <Stat title="Hyperedge Type" value="Co-authored" />
+  <Stat title="Hyperedge Type" value="Co-authored Publication" />
 </dl>
+
+## Node Degrees
+
+<DegreeLineChart histogram={frontmatter["statistics"]["node-degrees"]} />
 
 ## Hyperedges
 
