--- a/src/datasets/coauth-MAG-History.mdx
+++ b/src/datasets/coauth-MAG-History.mdx
@@ -2,8 +2,8 @@
 title: coauth-MAG-History
 source: https://www.cs.cornell.edu/~arb/data/coauth-MAG-History/
 citation:
-  - 10.1073/pnas.1800683115
-  - 10.1145/2740908.2742839
+- 10.1073/pnas.1800683115
+- 10.1145/2740908.2742839
 tags:
 - undirected
 - weighted
@@ -15,9 +15,318 @@ related:
 statistics:
   num-nodes: 1034876
   num-edges: 1813147
+  node-degrees:
+    1: 730527
+    2: 130528
+    3: 54506
+    4: 30395
+    5: 19346
+    6: 13085
+    7: 9628
+    8: 7191
+    9: 5589
+    10: 4547
+    11: 3669
+    12: 3056
+    13: 2490
+    14: 2208
+    15: 1815
+    16: 1566
+    17: 1387
+    18: 1185
+    19: 1093
+    20: 913
+    21: 825
+    22: 715
+    23: 652
+    24: 616
+    25: 534
+    26: 457
+    27: 424
+    28: 328
+    29: 340
+    30: 287
+    31: 294
+    32: 248
+    33: 227
+    34: 258
+    35: 210
+    36: 169
+    37: 181
+    38: 161
+    39: 131
+    40: 130
+    41: 140
+    42: 150
+    43: 118
+    44: 113
+    45: 95
+    46: 97
+    47: 92
+    48: 84
+    49: 90
+    50: 74
+    51: 64
+    52: 52
+    53: 68
+    54: 58
+    55: 59
+    56: 56
+    57: 57
+    58: 44
+    59: 61
+    60: 45
+    61: 43
+    62: 37
+    63: 40
+    64: 33
+    65: 40
+    66: 24
+    67: 34
+    68: 25
+    69: 32
+    70: 35
+    71: 18
+    72: 25
+    73: 13
+    74: 28
+    75: 21
+    76: 28
+    77: 18
+    78: 20
+    79: 10
+    80: 19
+    81: 13
+    82: 15
+    83: 20
+    84: 16
+    85: 17
+    86: 20
+    87: 18
+    88: 14
+    89: 12
+    90: 10
+    91: 8
+    92: 13
+    93: 16
+    94: 13
+    95: 10
+    96: 12
+    97: 9
+    98: 11
+    99: 11
+    100: 12
+    101: 13
+    102: 11
+    103: 13
+    104: 9
+    105: 12
+    106: 11
+    107: 13
+    108: 6
+    109: 8
+    110: 8
+    111: 6
+    112: 5
+    113: 5
+    114: 8
+    115: 3
+    116: 8
+    117: 9
+    118: 4
+    119: 8
+    120: 3
+    121: 6
+    122: 2
+    123: 3
+    124: 7
+    125: 8
+    126: 6
+    127: 4
+    128: 9
+    129: 3
+    130: 5
+    131: 7
+    132: 4
+    133: 6
+    134: 5
+    135: 7
+    136: 5
+    137: 2
+    138: 3
+    139: 5
+    140: 1
+    141: 4
+    142: 3
+    143: 3
+    144: 6
+    145: 3
+    146: 3
+    147: 6
+    148: 1
+    149: 1
+    150: 2
+    151: 1
+    152: 2
+    153: 4
+    154: 2
+    155: 5
+    156: 1
+    157: 3
+    158: 2
+    159: 2
+    160: 2
+    161: 2
+    162: 3
+    163: 2
+    164: 4
+    165: 3
+    166: 2
+    168: 2
+    169: 4
+    170: 3
+    171: 4
+    174: 2
+    175: 2
+    177: 2
+    178: 1
+    179: 2
+    180: 3
+    181: 2
+    182: 1
+    184: 2
+    185: 3
+    186: 2
+    188: 1
+    191: 2
+    192: 1
+    193: 2
+    195: 2
+    196: 3
+    198: 3
+    199: 2
+    200: 4
+    202: 3
+    203: 4
+    204: 1
+    205: 1
+    207: 1
+    208: 1
+    209: 2
+    212: 3
+    214: 1
+    215: 3
+    216: 1
+    217: 2
+    218: 2
+    219: 2
+    220: 2
+    221: 3
+    223: 1
+    224: 1
+    227: 3
+    228: 1
+    230: 1
+    231: 1
+    232: 1
+    234: 2
+    236: 2
+    237: 1
+    240: 1
+    241: 1
+    242: 2
+    243: 1
+    245: 1
+    248: 1
+    249: 1
+    250: 1
+    251: 1
+    256: 1
+    259: 1
+    266: 1
+    268: 1
+    273: 2
+    274: 1
+    275: 2
+    276: 1
+    277: 1
+    278: 1
+    279: 3
+    280: 1
+    285: 2
+    287: 1
+    290: 1
+    291: 1
+    294: 1
+    295: 1
+    300: 1
+    303: 1
+    307: 2
+    311: 1
+    318: 2
+    325: 1
+    334: 1
+    335: 1
+    339: 1
+    345: 1
+    347: 1
+    353: 1
+    355: 1
+    358: 1
+    359: 1
+    363: 1
+    384: 1
+    391: 1
+    393: 1
+    396: 1
+    409: 1
+    410: 1
+    411: 2
+    412: 1
+    413: 1
+    418: 1
+    419: 1
+    421: 1
+    424: 1
+    435: 1
+    436: 1
+    442: 1
+    450: 1
+    451: 1
+    457: 1
+    458: 1
+    483: 1
+    492: 1
+    493: 1
+    502: 1
+    523: 1
+    547: 1
+    567: 1
+    632: 1
+    643: 1
+    660: 1
+    676: 1
+    704: 1
+    764: 1
+    775: 1
+    780: 1
+    797: 1
+    828: 1
+    847: 1
+    893: 1
+    960: 1
+    961: 1
+    1024: 1
+    1066: 1
+    1077: 1
+    1090: 1
+    1129: 1
+    1224: 1
+    1730: 1
+    4348: 1
 attachments:
   dataset:
-    url: https://zenodo.org/records/17600662/files/coauth-MAG-History.txt.gz?download=1
+    url: coauth-MAG-History.txt.gz
     size: 21767556
 shape:
   '1800': 234
@@ -243,6 +552,7 @@ shape:
 
 import Stat from "@/components/stat";
 import LineChart from "@/components/chart/line-chart";
+import DegreeLineChart from "@/components/chart/degree-line-chart";
 import { formatNumber } from "@/utils/format";
 
 This is a temporal higher-order network dataset, which here means a sequence of timestamped simplices where each simplex is a set of nodes.
@@ -258,8 +568,12 @@ Timestamps are the year of publication.
     title="Hyperedges"
     value={formatNumber(frontmatter["statistics"]["num-edges"])}
   />
-  <Stat title="Hyperedge Type" value="Co-authored" />
+  <Stat title="Hyperedge Type" value="Co-authored Publication" />
 </dl>
+
+## Node Degrees
+
+<DegreeLineChart histogram={frontmatter["statistics"]["node-degrees"]} />
 
 ## Hyperedges
 
