Add dataset format version to header

--- a/src/app/about/format/page.mdx
+++ b/src/app/about/format/page.mdx
@@ -1,10 +1,14 @@
 import Alert from "@/components/alert";
+import Badge from "@/components/badge";
 
 export const metadata = {
   title: "Dataset Format | AHORN - Aachen Higher-Order Repository of Networks",
 };
 
-# Dataset Format
+<h1 className="flex items-center justify-between gap-4">
+  <span>Dataset Format</span>
+  <Badge color="primary">Version 0.1</Badge>
+</h1>
 
 All datasets distributed in this project follow a standardized format to ensure consistency and ease of use.
 If you use [TopoNetX](https://github.com/pyt-team/TopoNetX), you can load all datasets in this repository directly using the provided functions.
