--- a/src/app/about/format/page.mdx
+++ b/src/app/about/format/page.mdx
@@ -40,7 +40,7 @@ Before giving the formal specification, here is a minimal example of a dataset i
 
 **Explanation:**
 
-- The first line contains network-level metadata as a JSON object, including a name and format version.
+- The first line contains dataset-level metadata as a JSON object, including a name and format version.
 - The network has four nodes: `1`, `2`, `4`, and `5`:
   - Node `1` has an attribute `name` with value `John Doe`, and an attribute `age` with value `28`.
   - Nodes `2`, `4`, and `5` are defined implicitly by their appearance in the edges.
@@ -52,7 +52,7 @@ Before giving the formal specification, here is a minimal example of a dataset i
 
 The dataset is a plain or gzipped text file with the following structure:
 
-- The first line MAY contain network-level metadata in JSON format.
+- The first line MAY contain dataset-level metadata in JSON format.
 - Afterwards, there is a section for nodes, where each node is defined on a separate line.
 - Following the nodes, there are lines for edges (hyperedges or simplices), where each line contains a comma-separated list of node identifiers.
 
@@ -77,7 +77,7 @@ In general, nodes are defined implicitly by their appearance in edges, but can b
 
 ## Attributes
 
-Any element (including the network itself) in the dataset MAY be equipped with attributes that provide additional information.
+Any element (including the dataset itself) in the dataset MAY be equipped with attributes that provide additional information.
 Attributes are stored as key-value pairs, where the key is a string and the value can be of arbitrary type.
 They are encoded as JSON objects in the dataset file and are placed at the end of the line for each node or edge.
 Some attributes have standardized meanings, while others can be custom-defined for specific datasets.
