--- a/src/app/about/datasheet/page.mdx
+++ b/src/app/about/datasheet/page.mdx
@@ -22,6 +22,7 @@ Required fields in the frontmatter:
 
 Optional fields that are automatically used when present:
 
+- `license`: The license of the dataset. This can be either a string or an object with `spdx` and `link` fields.
 - `citation`: One or more BibTex entries that should be cited when using the dataset.
 - `tags`: A list of tags that describe the dataset. These are used for filtering datasets in the UI.
 
