--- a/src/app/about/imprint/page.mdx
+++ b/src/app/about/imprint/page.mdx
@@ -9,7 +9,7 @@ RWTH Aachen University<br />
 Ahornstraße 55<br />
 52074 Aachen, Germany<br />
 Phone: +49 241 80 21490<br />
-Email: schaub@cs.rwth-aachen.de<br />
+Email: schaub@netsci.rwth-aachen.de<br />
 Website: [netsci.rwth-aachen.de](https://netsci.rwth-aachen.de)
 
 RWTH Aachen University is a public corporation. It is represented by the Rector.
