--- a/src/app/about/privacy/page.mdx
+++ b/src/app/about/privacy/page.mdx
@@ -14,7 +14,7 @@ RWTH Aachen University<br />
 Ahornstraße 55<br />
 52074 Aachen, Germany<br />
 Phone: +49 241 80 21490<br />
-Email: schaub@cs.rwth-aachen.de<br />
+Email: schaub@netsci.rwth-aachen.de<br />
 Website: [netsci.rwth-aachen.de](https://netsci.rwth-aachen.de)
 
 ## Data Protection Officer
@@ -67,4 +67,4 @@ This website does not make use of cookies.
 If personal data is processed by the data subject, he/she has the following rights vis-à-vis the controller.
 Pursuant to Article 15 et seq. GDPR, the data subject has the right of access to the personal data concerned, the right to rectification or erasure or restriction of processing, the right to object to processing and the right to data portability. In accordance with Article 77 GDPR, he/she also has the right to lodge a complaint with the competent data protection supervisory authority (https://www.ldi.nrw.de/kontakt) if the data subject is of the opinion that the processing of personal data concerning him/her violates this regulation. If the processing is based on the consent of the data subject (see Art. 6 para. 1 sentence 1 lit. a), Art. 9 para. 2 lit. a) GDPR), he/she also has the right to withdraw consent at any time without affecting the lawfulness of processing based on consent before its withdrawal; this will only take effect for the future.
 
-To exercise the aforementioned rights, the data subject should send an email to schaub@cs.rwth-aachen.de.
+To exercise the aforementioned rights, the data subject should send an email to schaub@netsci.rwth-aachen.de.
