--- a/src/datasets/stackoverflow-answers.mdx
+++ b/src/datasets/stackoverflow-answers.mdx
@@ -2,14 +2,15 @@
 title: StackOverflow Answers
 disable: true
 source: https://www.cs.cornell.edu/~arb/data/stackoverflow-answers/
-citation: |
-  @inproceedings{Veldt-2020-local,
-    title   = {Minimizing Localized Ratio Cut Objectives in Hypergraphs},
-    author  = {Veldt, Nate and Benson, Austin R. and Kleinberg, Jon},
-    publisher = {{ACM} Press},
-    booktitle = {Proceedings of the 26th {ACM} {SIGKDD} International Conference on Knowledge Discovery and Data Mining},
-    year    = {2020}
-  }
+citation:
+  - |
+    @inproceedings{Veldt-2020-local,
+      title   = {Minimizing Localized Ratio Cut Objectives in Hypergraphs},
+      author  = {Veldt, Nate and Benson, Austin R. and Kleinberg, Jon},
+      publisher = {{ACM} Press},
+      booktitle = {Proceedings of the 26th {ACM} {SIGKDD} International Conference on Knowledge Discovery and Data Mining},
+      year    = {2020}
+    }
 network-type: hypergraph
 tags:
   - undirected
