--- a/src/datasets/vegas-bars-reviews.mdx
+++ b/src/datasets/vegas-bars-reviews.mdx
@@ -1,13 +1,14 @@
 ---
 title: Vegas Bars Reviews
 source: https://www.cs.cornell.edu/~arb/data/cat-edge-vegas-bars-reviews/
-citation: |
-  @article{amburg2020fair,
-    title={Fair Clustering for Diverse and Experienced Groups},
-    author={Amburg, Ilya and Veldt, Nate and Benson, Austin R},
-    journal={arXiv:2006.05645},
-    year={2020}
-  }
+citation:
+  - |
+    @article{amburg2020fair,
+      title={Fair Clustering for Diverse and Experienced Groups},
+      author={Amburg, Ilya and Veldt, Nate and Benson, Austin R},
+      journal={arXiv:2006.05645},
+      year={2020}
+    }
 network-type: hypergraph
 tags:
   - edge labels
