Add `semantic-scholar-coauth-sample` dataset

--- a/src/datasets/congress-bills.mdx
+++ b/src/datasets/congress-bills.mdx
@@ -8,7 +8,7 @@ citation:
   - 10.1016/j.socnet.2005.11.003
 network-type: temporal
 tags:
-  - social networks
+  - social
   - "source: benson"
 related:
   - house-bills
