--- a/src/datasets/contact-primary-school.mdx
+++ b/src/datasets/contact-primary-school.mdx
@@ -6,7 +6,7 @@ citation:
   - 10.1371/journal.pone.0023176
 network-type: temporal
 tags:
-  - social networks
+  - social
   - temporal
   - proximity
   - "source: benson"
