--- a/src/datasets/karate-club.mdx
+++ b/src/datasets/karate-club.mdx
@@ -5,7 +5,7 @@ citation:
   - 10.1086/jar.33.4.3629752
 network-type: simplicial
 tags:
-  - social networks
+  - social
   - 'lifting: clique complex'
 statistics:
   num-nodes: 34
