--- a/src/datasets/contact-high-school.mdx
+++ b/src/datasets/contact-high-school.mdx
@@ -8,7 +8,7 @@ network-type: temporal
 related:
   - contact-primary-school
 tags:
-  - social networks
+  - social
   - temporal
   - proximity
   - 'source: benson'
